# Proxy-AIops

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml  server.json  smithery.yaml
docs/: VERIFICATION.md
mcp_server/: __init__.py  _shared.py  server.py
mcp_server/tools/: __init__.py  analysis.py  certs.py  configread.py  routes.py  services.py  status.py  traffic.py  undo.py  writes.py
proxy_aiops/: __init__.py  config.py  connection.py  doctor.py  platform.py  secretstore.py
proxy_aiops/cli/: __init__.py  _common.py  _root.py  analyze.py  certs.py  configcmd.py  doctor.py  init.py  overview.py  routes.py  secret.py  server.py  services.py  undo.py
proxy_aiops/governance/: __init__.py  audit.py  budget.py  decorators.py  paths.py  patterns.py  policy.py  readonly.py  sanitize.py  undo.py
proxy_aiops/ops/: __init__.py  _util.py  analysis.py  certs.py  configread.py  overview.py  routes.py  services.py  status.py  traffic.py  writes.py
skills/proxy-aiops/: SKILL.md
skills/proxy-aiops/references/: agent-guardrails.md  capabilities.md  cli-reference.md  setup-guide.md
tests/: conftest.py  test_analysis.py  test_cli_reads.py  test_cli_secret.py  test_cli_writes.py  test_connection.py  test_doctor.py  test_dpapi_version.py  test_gov_audit.py  test_gov_decorators.py  test_gov_patterns.py  test_gov_policy.py  test_governance_persistence.py  test_init.py  test_int_fidelity.py  test_mcp_read_tools.py  test_ops_extra.py  test_optional_fields.py  test_platform.py  test_readonly.py  test_reads.py  test_secretstore.py  test_self_lockout.py  test_smoke.py  test_undo_executor.py  test_writes.py
